@@ -115,7 +115,7 @@ struct grub_ntfs_bpb
   grub_int8_t reserved_4[3];
   grub_int8_t clusters_per_index;
   grub_int8_t reserved_5[3];
-  grub_uint64_t serial_number;
+  grub_uint64_t num_serial;
   grub_uint32_t checksum;
 } __attribute__ ((packed));
 
@@ -151,6 +151,7 @@ struct grub_ntfs_data
   grub_uint32_t spc;
   grub_uint32_t blocksize;
   grub_uint32_t mft_start;
+  grub_uint64_t uuid;
 };
 
 struct grub_ntfs_comp
